# politech-cpp-labs

./: CMakeLists.txt
B1/: accesses.hpp  main.cpp  print.hpp  sort.cpp  sort.hpp  task1.cpp  task2.cpp  task3.cpp  task4.cpp
B2/: commands.cpp  main.cpp  queue-with-priority.hpp  task1.cpp  task2.cpp
B3/: bookmarkManager.cpp  bookmarkManager.hpp  commands.cpp  commands.hpp  factorialContainer.cpp  factorialContainer.hpp  main.cpp  manipulators.hpp  phonebook.hpp  task1.cpp  task2.cpp
B4/: main.cpp
B5/: main.cpp  task1.cpp  task2.cpp
B6/: Statistic.cpp  Statistic.hpp  main.cpp
B7/: circle.cpp  circle.hpp  main.cpp  shape.cpp  shape.hpp  square.cpp  square.hpp  task1.cpp  task2.cpp  triangle.cpp  triangle.hpp
B8/: main.cpp  tokens.cpp  tokens.hpp
