cmake_minimum_required(VERSION 3.15)
project(polikake)

set(CMAKE_CXX_STANDARD 14)

add_executable(polikake
#        B1/main.cpp
#        B1/accesses.hpp
#        B1/print.hpp
#        B1/sort.cpp
#        B1/sort.hpp
#        B1/task1.cpp
#        B1/task2.cpp
#        B1/task3.cpp
#        B1/task4.cpp
#        B2/commands.cpp
#        B2/main.cpp
#        B2/queue-with-priority.hpp
#        B2/task1.cpp
#        B2/task2.cpp
#        B3/bookmarkManager.cpp
#        B3/bookmarkManager.hpp
#        B3/commands.cpp
#        B3/commands.hpp
#        B3/factorialContainer.cpp
#        B3/factorialContainer.hpp
#        B3/main.cpp
#        B3/manipulators.hpp
#        B3/phonebook.hpp
#        B3/task1.cpp
#        B3/task2.cpp
#        B4/main.cpp
#        B5/main.cpp
#        B5/task1.cpp
#        B5/task2.cpp
#        B6/main.cpp
#        B6/Statistic.cpp
#        B6/Statistic.hpp
#        B7/circle.cpp
#        B7/circle.hpp
#        B7/main.cpp
#        B7/shape.cpp
#        B7/shape.hpp
#        B7/square.cpp
#        B7/square.hpp
#        B7/task1.cpp
#        B7/task2.cpp
#        B7/triangle.cpp
#        B7/triangle.hpp
        B8/main.cpp
        B8/tokens.cpp
        B8/tokens.hpp
        )